# PRR-Stack-Template

./: .gitignore  Dockerfile  README.md  compose.yml
.github/workflows/: build_test.yml
website/backend/: .env  Cargo.toml  Rocket.toml
website/backend/migrations/2022-03-10-084048_init/: down.sql  up.sql
website/backend/src/: lib.rs  main.rs
website/backend/src/api/: test.rs
website/backend/src/db/: db_create.sh  schema.rs
website/backend/src/db/models/: users.rs
website/frontend/: package-lock.json  package.json
website/frontend/public/: manifest.json
website/frontend/src/: App.js
website/frontend/src/routes/: index.js
website/frontend/src/routes/Admin/: Admin.js
website/frontend/src/routes/Home/: Home.js
website/frontend/src/routes/Login/: Login.js
