[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.136"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde_derive = "1.0"
serde_json = "1.0.58"
env_logger = "0.5.12"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]